# Grounding-Dino-Training

./: .gitignore  README.md  grounding_dino_ui.py  grounding_dino_webui.py  launch_ui.bat  launch_ui.ps1  launch_ui.sh  launch_webui.ps1  pyproject.toml  setup.py  setup_rust_environment.ps1  test_rust_integration.py  test_tch_rs.py
GroundingDINO/: environment_linux.yaml  setup.py  train_grounding_dino.py  verify_training_environment.py
GroundingDINO/demo/: check_tokenizer.py  create_coco_dataset.py
GroundingDINO/groundingdino/datasets/: cocogrounding_eval.py  transforms.py
GroundingDINO/groundingdino/models/GroundingDINO/: bertwarper.py  groundingdino.py  ms_deform_attn.py  utils.py
GroundingDINO/groundingdino/util/: box_ops.py  get_tokenlizer.py  inference.py  optimized_ops.py  utils.py
GroundingDINO/suite/: profiler.py  train_grounding_dino.py  verify_training_environment.py
GroundingDINO/suite/demo/: create_coco_dataset.py  gradio_app.py
doc/: Grounding_DINO_服务器部署技术方案.md  Linux适配技术方案.md  Rust环境搭建指南.md  Rust重写技术方案.md  create_package.ps1  profiler使用说明.md  必要文件清单.md  环境配置指南.md  自动标注原理与操作流程文档.md  训练步骤指南.md
rust/: Cargo.toml
rust/src/: lib.rs  memory_pool.rs  parallel.rs  tensor_ops.rs  utils.rs
